<resources>
    <string name="app_name">ivagavran</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clean_food">CLEAN FOOD</string>
    <string name="no_dairy">Without Dairy</string>
    <string name="no_sugar">Without Sugar</string>
    <string name="meals">MEALS</string>
    <string name="journal">JOURNAL</string>
    <string name="blog">BLOG</string>
    <string name="advices">ADVICES</string>
    <string name="hello_world">hello world</string>
    <string name="hello_world1">hello world 1</string>
    <string name="hello_world2">hello world 2</string>
</resources>