<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/tvCleanFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/clean_food"
        android:textColor="@color/light_green"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivMealPic2"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@id/tvCleanFood"
        android:src="@drawable/meal2"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/ivMealPic3"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@id/tvCleanFood"
        android:src="@drawable/meal3"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginStart="220dp"/>

    <ImageView
        android:id="@+id/ivForbidden1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/ivMealPic2"
        android:src="@drawable/zabranajela"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/ivForbidden2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/ivForbidden1"
        android:src="@drawable/zabranajela"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tvNoDairy"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:text="@string/no_dairy"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_below="@id/ivForbidden1"
        android:gravity="center"
        android:textStyle="normal"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/ivForbidden1"
        android:layout_toRightOf="@id/ivForbidden1" />

    <TextView
        android:id="@+id/tvNoSugar"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:text="@string/no_sugar"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_below="@id/ivMealPic2"
        android:layout_toRightOf="@id/ivForbidden1"
        android:gravity="center"
        android:textStyle="normal"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/ivForbidden1" />

    <Button
        android:id="@+id/bMeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNoDairy"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/light_green"
        android:text="@string/meals"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bJournal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bMeals"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/light_green"
        android:text="@string/journal"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bAdvices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bJournal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/light_green"
        android:text="@string/advices"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>